# medicare-pipeline

./: .gitignore  DESIGN.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
data/: README.md  data_dictionary.md  data_lineage.md
scripts/: setup.sh
src/api/: __init__.py  main.py  server.py  test_client.py
src/medicare_pipeline/: create_analytics.py  csv_to_parquet.py  data_cleaner.py  download_data.py  main.py  transform_data.py  validate_data.py
